--- a/rules.html
+++ b/rules.html
@@ -14,123 +14,93 @@
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: #f4f5ff;
+      background: #f9f9fc;
       color: #333;
       line-height: 1.6;
+      padding-bottom: 60px;
     }
 
     .navbar {
       background: #2d2e52;
       color: #fff;
       padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      text-align: center;
     }
 
-    .logo {
-      font-size: 26px;
-      font-weight: 700;
-      margin-bottom: 10px;
-    }
-
-    .nav-links {
-      list-style: none;
-      display: flex;
-      flex-direction: row;
-      gap: 15px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      padding: 8px 12px;
-      border-radius: 6px;
-      transition: background 0.3s;
-    }
-
-    .nav-links a:hover {
-      background: #ffde59;
-      color: #2d2e52;
+    .navbar h1 {
+      font-size: 24px;
     }
 
     .content {
       max-width: 800px;
-      margin: auto;
-      padding: 40px 20px;
+      margin: 30px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.05);
     }
 
-    .content h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
+    .content h2 {
       text-align: center;
+      margin-bottom: 25px;
+      font-size: 26px;
+      color: #2d2e52;
     }
 
-    .content ul {
-      list-style-type: disc;
-      padding-left: 20px;
+    ul {
+      list-style: none;
+      padding-left: 0;
     }
 
-    .content li {
-      margin-bottom: 12px;
-      font-size: 16px;
+    ul li {
+      background: #eef2ff;
+      margin-bottom: 15px;
+      padding: 15px;
+      border-radius: 10px;
+      border-left: 5px solid #2d2e52;
     }
 
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 20px;
       text-align: center;
-      font-size: 14px;
-      margin-top: 40px;
+      padding: 15px 0;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
     }
 
-    /* Responsive: Mobile screen par nav vertical ho jaye */
-    @media (max-width: 768px) {
-      .nav-links {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-        margin-top: 10px;
-      }
-
-      .content h1 {
-        font-size: 22px;
+    @media (max-width: 600px) {
+      .content {
+        margin: 20px 15px;
+        padding: 20px;
       }
     }
   </style>
 </head>
 <body>
 
-  <nav class="navbar">
-    <div class="logo">🎲 JokerLudo</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="rules.html">Rules</a></li>
-      <li><a href="join.html">Join</a></li>
-      <li><a href="addgroup.html">Add Group</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="privacy.html">Privacy</a></li>
-    </ul>
-  </nav>
+  <div class="navbar">
+    <h1>🎯 JokerLudo - Group Rules</h1>
+  </div>
 
-  <section class="content">
-    <h1>📜 JokerLudo Group Rules</h1>
+  <div class="content">
+    <h2>📝 Group Rules</h2>
     <ul>
-      <li>Game ka result final hoga, dispute allowed nahi hai.</li>
-      <li>Only screenshot ke through payment proof submit karein.</li>
-      <li>Fake screenshot ya cheating par ban ho sakta hai.</li>
-      <li>Group me abusive language bilkul allowed nahi hai.</li>
-      <li>Official deposit number sirf: <strong>9670814522</strong> hai.</li>
-      <li>Admin ka decision final rahega in any dispute.</li>
+      <li>✅ Sirf winning screenshots & payment proof share karein.</li>
+      <li>❌ Koi bhi abusive language allowed nahi hai.</li>
+      <li>✅ Withdrawal ke liye correct UPI details dena zaroori hai.</li>
+      <li>❌ Fake screenshots ya fraud karne wale users ko turant block kiya jayega.</li>
+      <li>✅ Admin se kisi bhi samasya ke liye WhatsApp par contact karein.</li>
+      <li>✅ Har match ka result transparent aur fair hota hai.</li>
+      <li>❌ Do not share promotional or referral links bina permission ke.</li>
+      <li>✅ Respect all players and admins.</li>
+      <li>✅ Game rules time-to-time update ho sakte hain. Har update group me share kiya jayega.</li>
     </ul>
-  </section>
+  </div>
 
   <footer>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+    © 2025 JokerLudo Group
   </footer>
 
 </body>
