--- a/rules.html
+++ b/rules.html
@@ -3,106 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JokerLudo Rules</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <title>JokerLudo - Rules</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
+      margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: #fdfdfd;
-      color: #333;
-      line-height: 1.6;
+      background: #f9f9ff;
+    }
+    header {
+      background: #2d2e52;
+      color: #fff;
+      padding: 20px 10px;
+      text-align: center;
+      font-size: 28px;
+      font-weight: 700;
+      cursor: pointer;
     }
     .navbar {
-      background: #2d2e52;
-      padding: 15px 20px;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      justify-content: center;
       flex-wrap: wrap;
+      background: #ffffff;
+      border-bottom: 2px solid #2d2e52;
+      padding: 10px 0;
     }
-    .logo {
-      font-size: 26px;
-      font-weight: 700;
-      color: #fff;
+    .navbar a {
+      margin: 0 12px;
       text-decoration: none;
-    }
-    .nav-links {
-      display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 500;
-      padding: 8px 12px;
-      border-radius: 6px;
-      transition: background 0.3s;
-    }
-    .nav-links a:hover {
-      background: #ffde59;
       color: #2d2e52;
+      font-weight: 600;
     }
-    .rules-container {
+    .navbar a:hover {
+      color: #ff5722;
+    }
+    .content {
       padding: 40px 20px;
       max-width: 800px;
-      margin: 0 auto;
+      margin: auto;
+      line-height: 1.8;
     }
-    .rules-container h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
+    .content h2 {
       text-align: center;
+      margin-bottom: 20px;
       color: #2d2e52;
     }
-    .rules-container ul {
-      list-style-type: decimal;
+    .content ul {
+      list-style: disc;
       padding-left: 20px;
-    }
-    .rules-container li {
-      margin-bottom: 15px;
-      font-size: 16px;
     }
     footer {
       background: #2d2e52;
-      color: #fff;
-      padding: 20px;
+      color: white;
       text-align: center;
-      font-size: 14px;
-    }
-    @media (max-width: 768px) {
-      .nav-links {
-        justify-content: center;
-        width: 100%;
-        margin-top: 10px;
-      }
+      padding: 15px 10px;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
+  <header onclick="window.location.href='index.html'">🎲 JokerLudo Group</header>
+
   <nav class="navbar">
-    <a href="index.html" class="logo">🎲 JokerLudo</a>
-    <div class="nav-links">
-      <a href="index.html">Home</a>
-      <a href="rules.html">Rules</a>
-      <a href="join.html">Join</a>
-      <a href="addgroup.html">Add Group</a>
-      <a href="contact.html">Contact</a>
-      <a href="privacy.html">Privacy</a>
-    </div>
+    <a href="index.html">Home</a>
+    <a href="rules.html">Rules</a>
+    <a href="join.html">Join</a>
+    <a href="addgroup.html">Add Group</a>
+    <a href="contact.html">Contact</a>
+    <a href="privacy.html">Privacy</a>
   </nav>
 
-  <div class="rules-container">
-    <h1>JokerLudo Group Rules</h1>
+  <section class="content">
+    <h2>Game Rules & Guidelines</h2>
     <ul>
-      <li>Sabhi members ko group me respect dena zaroori hai.</li>
-      <li>Jitne wale ko 15 min ke andar payment karna hoga.</li>
-      <li>No cheating, fake screenshots, ya delay allowed.</li>
-      <li>Official payment number sirf <strong>9670814522</strong> hai.</li>
-      <li>Agar kisi ne rule break kiya to group se nikal diya jayega.</li>
+      <li>✅ Har player ko fair game play karna zaroori hai.</li>
+      <li>✅ Koi bhi hacking ya cheating detect hone par account ban ho sakta hai.</li>
+      <li>✅ Withdrawal sirf game jeetne ke baad hi milega.</li>
+      <li>✅ Group ke rules follow karna sabhi members ke liye mandatory hai.</li>
+      <li>✅ Admin ka decision final hoga kisi bhi confusion mein.</li>
     </ul>
-  </div>
+  </section>
 
   <footer>
     <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
