--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     .nav-box {
       border: 2px solid #ffde59;
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
       gap: 12px;
       padding: 10px;
       border-radius: 8px;
       background-color: #1f1f3e;
+      flex-wrap: nowrap;
+      overflow-x: auto;
     }
 
     .nav-box a {
@@ -52,6 +53,7 @@
       padding: 8px 14px;
       border-radius: 5px;
       transition: background 0.3s;
+      white-space: nowrap;
     }
 
     .nav-box a:hover {
@@ -116,17 +118,32 @@
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 20px;
-      text-align: center;
+      padding: 12px 20px;
       font-size: 14px;
     }
 
-    @media (max-width: 768px) {
-      .nav-box {
-        flex-direction: row;
-        gap: 10px;
-      }
+    .footer-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      white-space: nowrap;
+    }
 
+    .footer-container a {
+      color: #ffde59;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    .footer-container a:hover {
+      color: #fff;
+    }
+
+    @media (max-width: 768px) {
       .hero h1 {
         font-size: 24px;
       }
@@ -175,7 +192,13 @@
   </section>
 
   <footer>
-    <p>© 2025 JokerLudo Group. All Rights Reserved.</p>
+    <div class="footer-container">
+      <span>© 2025 JokerLudo</span>
+      <a href="privacy.html">Privacy</a>
+      <a href="contact.html">Contact</a>
+      <a href="rules.html">Rules</a>
+      <a href="index.html">Home</a>
+    </div>
   </footer>
 
 </body>
