--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     }
 
     .nav-box {
-      border: 2px solid #ffde59;
       display: flex;
       justify-content: center;
       gap: 12px;
@@ -118,28 +117,29 @@
     footer {
       background: #2d2e52;
       color: #fff;
-      padding: 12px 20px;
+      padding: 14px 10px;
       font-size: 14px;
+      text-align: center;
     }
 
-    .footer-container {
+    .footer-links {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: 20px;
       flex-wrap: nowrap;
       overflow-x: auto;
+      gap: 15px;
       white-space: nowrap;
     }
 
-    .footer-container a {
+    .footer-links a {
       color: #ffde59;
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s;
     }
 
-    .footer-container a:hover {
+    .footer-links a:hover {
       color: #fff;
     }
 
@@ -192,12 +192,14 @@
   </section>
 
   <footer>
-    <div class="footer-container">
+    <div class="footer-links">
       <span>© 2025 JokerLudo</span>
-      <a href="privacy.html">Privacy</a>
-      <a href="contact.html">Contact</a>
-      <a href="rules.html">Rules</a>
       <a href="index.html">Home</a>
+      <a href="rules.html">Rules</a>
+      <a href="join.html">Join</a>
+      <a href="addgroup.html">Add Group</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacy.html">Privacy</a>
     </div>
   </footer>
 
